# conceptrodon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  DEVLOG.md  DOCS.md  README.md  TODO.md
conceptrodon/: EXEMPLAR.hpp  TODO.md  arcadia.hpp  camellia.hpp  capsule.hpp  carrier.hpp  cay.hpp  coalfish.hpp  conceptrodon.hpp  cotanivore.hpp  coy.hpp  daydream.hpp  delegacy.hpp  diplomat.hpp  emissary.hpp  florican.hpp  fly.hpp  foolery.hpp  forlorn.hpp  glowworm.hpp  gly.hpp  graphite.hpp  halcyon.hpp  halfmoon.hpp  label.hpp  legation.hpp  lullaby.hpp  lunatic.hpp  lungfish.hpp  monotony.hpp  morning.hpp  mouldivore.hpp  nirvana.hpp  omennivore.hpp  pagelivore.hpp  pay.hpp  peg.hpp  persist.hpp  phantom.hpp  prefix.hpp  (+23 more)
conceptrodon/cotanivore/: kindred_repack.hpp  paste.hpp  repack.hpp  typical_paste.hpp
conceptrodon/descend/: badge.hpp  cabin.hpp  coral.hpp  dairy.hpp  flora.hpp  glass.hpp  grape.hpp  habit.hpp  label.hpp  lunch.hpp  rally.hpp  ramen.hpp  rover.hpp  saber.hpp  snack.hpp  stamp.hpp  totem.hpp  winch.hpp
conceptrodon/functivore/: analyzer.hpp  apply_return_type.hpp  are_same_type_signature_as.hpp  are_same_variadic_type_signature_as.hpp  get_invoke_return_type.hpp  get_parameter_types.hpp  get_return_type.hpp  get_type_signature.hpp  get_variadic_type_signature.hpp  is_const.hpp  is_lvalue_reference.hpp  is_noexcept.hpp  is_rvalue_reference.hpp  is_variadic.hpp  is_volatile.hpp  typical_get_return_type.hpp  typical_get_type_signature.hpp  typical_get_variadic_type_signature.hpp
conceptrodon/mouldivore/: agent.hpp  among.hpp  bi_cognate_plume.hpp  bind.hpp  classic_fold_left.hpp  classic_fold_left_first.hpp  classic_fold_right.hpp  classic_fold_right_last.hpp  classic_trek.hpp  classic_trip.hpp  cognate_classic_modify.hpp  cognate_classic_transform.hpp  cognate_erase.hpp  cognate_filter.hpp  cognate_front.hpp  cognate_inject.hpp  cognate_insert.hpp  cognate_modify.hpp  cognate_remove.hpp  cognate_repeat.hpp  cognate_reverse.hpp  cognate_rotate.hpp  cognate_slice.hpp  cognate_transform.hpp  conceal.hpp  conjunction.hpp  disjunction.hpp  find.hpp  flip.hpp  flow_deviate.hpp  fold_left.hpp  fold_left_first.hpp  fold_right.hpp  fold_right_last.hpp  independent_find.hpp  independent_left_interview.hpp  independent_right_interview.hpp  is_specialization.hpp  left_interview.hpp  left_review.hpp  (+18 more)
conceptrodon/omennivore/: among.hpp  classic_modify_types.hpp  easy_kindred_repack.hpp  easy_paste.hpp  easy_typical_paste.hpp  extend_back.hpp  extend_front.hpp  flatten.hpp  insert_types.hpp  insert_values.hpp  is_almanac.hpp  is_calmful.hpp  is_coolful.hpp  is_dawnful.hpp  is_freeway.hpp  is_glowful.hpp  is_gritful.hpp  is_lullful.hpp  is_moldful.hpp  is_pageful.hpp  is_pottery.hpp  is_railway.hpp  is_willful.hpp  laborious_flatten.hpp  laborious_press.hpp  modify_types.hpp  modify_values.hpp  press.hpp  remove_types.hpp  remove_values.hpp  send.hpp  total.hpp  typical_among.hpp  zip.hpp
conceptrodon/pagelivore/: agent.hpp  among.hpp  bi_cognate_gauge.hpp  bind.hpp  bind_front.hpp  classic_trek.hpp  classic_trip.hpp  cognate_erase.hpp  cognate_filter.hpp  cognate_find.hpp  cognate_fold_left.hpp  cognate_fold_left_first.hpp  cognate_fold_right.hpp  cognate_fold_right_last.hpp  cognate_front.hpp  cognate_inject.hpp  cognate_insert.hpp  cognate_left_interview.hpp  cognate_look_for.hpp  (+57 more)
docs/: exemplar.hpp  index.md
tests/: tests.cpp
(+6364 files in other folders)
